--- a/Modeling-Custom_01.ipynb
+++ b/Modeling-Custom_01.ipynb
@@ -1099,84 +1099,84 @@
     }
    ],
    "source": [
-    "results = {\n",
-    "    'target' : [],\n",
-    "    'best_cv_scores' : [],\n",
-    "    'best_params' : [],\n",
-    "    'AUC_train_score' : [],\n",
-    "    'AUC_test_score' : [],\n",
-    "    'train_f1_scores' : [],\n",
-    "    'test_f1_scores' : [],\n",
-    "    'train_precision_scores' : [], \n",
-    "    'test_precision_scores' : [],\n",
-    "    'train_recall_scores' : [],\n",
-    "    'test_recall_scores' : []\n",
-    "}\n",
+    "# results = {\n",
+    "#     'target' : [],\n",
+    "#     'best_cv_scores' : [],\n",
+    "#     'best_params' : [],\n",
+    "#     'AUC_train_score' : [],\n",
+    "#     'AUC_test_score' : [],\n",
+    "#     'train_f1_scores' : [],\n",
+    "#     'test_f1_scores' : [],\n",
+    "#     'train_precision_scores' : [], \n",
+    "#     'test_precision_scores' : [],\n",
+    "#     'train_recall_scores' : [],\n",
+    "#     'test_recall_scores' : []\n",
+    "# }\n",
     "\n",
-    "targets = ['ignore']\n",
+    "# targets = ['ignore']\n",
     "    \n",
-    "features = mass_no_country.drop(columns=['id', 'country', 'ccode', 'region', 'location','protesteridentity', 'sources',\n",
-    "       'notes', 'protester_id_type', 'protest_size_category', 'start_date', 'notes_clean', 'neg', 'neu', 'pos', 'compound',\n",
-    "       'end_date', 'target', 'arrests', 'accomodation', 'beatings', 'protest_duration', 'pop_male', 'pop_female',\n",
-    "       'crowddispersal', 'ignore', 'killings', 'shootings', 'violent_response','partipants_number'])\n",
+    "# features = mass_no_country.drop(columns=['id', 'country', 'ccode', 'region', 'location','protesteridentity', 'sources',\n",
+    "#        'notes', 'protester_id_type', 'protest_size_category', 'start_date', 'notes_clean', 'neg', 'neu', 'pos', 'compound',\n",
+    "#        'end_date', 'target', 'arrests', 'accomodation', 'beatings', 'protest_duration', 'pop_male', 'pop_female',\n",
+    "#        'crowddispersal', 'ignore', 'killings', 'shootings', 'violent_response','partipants_number'])\n",
     "\n",
-    "for target in targets: \n",
+    "# for target in targets: \n",
     "\n",
-    "    X = features\n",
-    "    y = mass_no_country[target]\n",
+    "#     X = features\n",
+    "#     y = mass_no_country[target]\n",
     "\n",
-    "    logreg = LogisticRegression(multi_class='ovr')\n",
+    "#     logreg = LogisticRegression(multi_class='ovr')\n",
     "\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=48)\n",
+    "#     X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=48)\n",
     "\n",
-    "    ss = StandardScaler()\n",
-    "    X_train_sc = ss.fit_transform(X_train)\n",
-    "    X_test_sc = ss.transform(X_test)\n",
+    "#     ss = StandardScaler()\n",
+    "#     X_train_sc = ss.fit_transform(X_train)\n",
+    "#     X_test_sc = ss.transform(X_test)\n",
     "    \n",
-    "    params = {\n",
-    "    'penalty' : ['l1','l2'], \n",
-    "    'C' : [.01],\n",
-    "    'solver' : ['liblinear', 'saga'],\n",
-    "    'max_iter' : [100, 1000],\n",
-    "    #'class_weight' : [{1:0, 8:1}, {1:0, 1:8}]\n",
-    "    }\n",
+    "#     params = {\n",
+    "#     'penalty' : ['l1','l2'], \n",
+    "#     'C' : [.01],\n",
+    "#     'solver' : ['liblinear', 'saga'],\n",
+    "#     'max_iter' : [100, 1000],\n",
+    "#     #'class_weight' : [{1:0, 8:1}, {1:0, 1:8}]\n",
+    "#     }\n",
     "\n",
-    "    grid = GridSearchCV(\n",
-    "        logreg, param_grid=params, cv=10, verbose=2, \n",
-    "        scoring = {'AUC': 'roc_auc', 'Accuracy': make_scorer(accuracy_score)},\n",
-    "        refit='AUC', \n",
-    "        return_train_score=True\n",
-    "    )\n",
+    "#     grid = GridSearchCV(\n",
+    "#         logreg, param_grid=params, cv=10, verbose=2, \n",
+    "#         scoring = {'AUC': 'roc_auc', 'Accuracy': make_scorer(accuracy_score)},\n",
+    "#         refit='AUC', \n",
+    "#         return_train_score=True\n",
+    "#     )\n",
     "        \n",
-    "    # fit grids\n",
-    "    grid.fit(X_train_sc, y_train)    \n",
+    "#     # fit grids\n",
+    "#     grid.fit(X_train_sc, y_train)    \n",
     "    \n",
-    "    results['target'].append(targets)\n",
+    "#     results['target'].append(targets)\n",
     "\n",
-    "    # append important grid results\n",
-    "    results['best_params'].append(grid.best_params_)\n",
-    "    results['best_cv_scores'].append(grid.best_score_)\n",
+    "#     # append important grid results\n",
+    "#     results['best_params'].append(grid.best_params_)\n",
+    "#     results['best_cv_scores'].append(grid.best_score_)\n",
     "\n",
-    "    # make predictions \n",
-    "    train_preds = grid.predict(X_train_sc)\n",
-    "    test_preds = grid.predict(X_test_sc)\n",
+    "#     # make predictions \n",
+    "#     train_preds = grid.predict(X_train_sc)\n",
+    "#     test_preds = grid.predict(X_test_sc)\n",
     "\n",
-    "    # various classification metrics\n",
-    "    # AUC scores \n",
-    "    results['AUC_train_score'].append(roc_auc_score(y_train, train_preds))\n",
-    "    results['AUC_test_score'].append(roc_auc_score(y_test, test_preds))\n",
+    "#     # various classification metrics\n",
+    "#     # AUC scores \n",
+    "#     results['AUC_train_score'].append(roc_auc_score(y_train, train_preds))\n",
+    "#     results['AUC_test_score'].append(roc_auc_score(y_test, test_preds))\n",
     "\n",
-    "    # f1 scores\n",
-    "    results['train_f1_scores'].append(f1_score(y_train, train_preds))\n",
-    "    results['test_f1_scores'].append(f1_score(y_test, test_preds))\n",
+    "#     # f1 scores\n",
+    "#     results['train_f1_scores'].append(f1_score(y_train, train_preds))\n",
+    "#     results['test_f1_scores'].append(f1_score(y_test, test_preds))\n",
     "\n",
-    "    # precision scores \n",
-    "    results['train_precision_scores'].append(precision_score(y_train, train_preds))\n",
-    "    results['test_precision_scores'].append(precision_score(y_test, test_preds))\n",
+    "#     # precision scores \n",
+    "#     results['train_precision_scores'].append(precision_score(y_train, train_preds))\n",
+    "#     results['test_precision_scores'].append(precision_score(y_test, test_preds))\n",
     "\n",
-    "    # recall scores\n",
-    "    results['train_recall_scores'].append(recall_score(y_train, train_preds))\n",
-    "    results['test_recall_scores'].append(recall_score(y_test, test_preds))"
+    "#     # recall scores\n",
+    "#     results['train_recall_scores'].append(recall_score(y_train, train_preds))\n",
+    "#     results['test_recall_scores'].append(recall_score(y_test, test_preds))"
    ]
   },
   {
@@ -1259,8 +1259,8 @@
     }
    ],
    "source": [
-    "results_df = pd.DataFrame(results)\n",
-    "results_df"
+    "# results_df = pd.DataFrame(results)\n",
+    "# results_df"
    ]
   },
   {
