--- a/code/04a_Multi_Label_Predictions.ipynb
+++ b/code/04a_Multi_Label_Predictions.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
        "[4 rows x 40 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,22 +239,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:310: UserWarning: Trying to unpickle estimator DecisionTreeClassifier from version 0.23.1 when using version 0.24.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
-      "  warnings.warn(\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:310: UserWarning: Trying to unpickle estimator RandomForestClassifier from version 0.23.1 when using version 0.24.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
-      "  warnings.warn(\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\base.py:310: UserWarning: Trying to unpickle estimator MultiOutputClassifier from version 0.23.1 when using version 0.24.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load the model from disk\n",
     "\n",
@@ -272,11 +259,12 @@
     {
      "data": {
       "text/plain": [
-       "MultiOutputClassifier(estimator=RandomForestClassifier(max_depth=15,\n",
-       "                                                       max_leaf_nodes=300,\n",
+       "MultiOutputClassifier(estimator=RandomForestClassifier(max_depth=30,\n",
+       "                                                       max_leaf_nodes=100,\n",
        "                                                       min_impurity_decrease=0,\n",
-       "                                                       min_samples_leaf=3,\n",
-       "                                                       n_estimators=300))"
+       "                                                       min_samples_leaf=5,\n",
+       "                                                       min_samples_split=10,\n",
+       "                                                       n_estimators=20))"
       ]
      },
      "execution_count": 19,
@@ -319,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +455,7 @@
        "[1 rows x 40 columns]"
       ]
      },
-     "execution_count": 319,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +679,7 @@
        "[2 rows x 40 columns]"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -945,7 +933,7 @@
        "[3 rows x 40 columns]"
       ]
      },
-     "execution_count": 321,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1223,7 @@
        "[4 rows x 40 columns]"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1301,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1543,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 323,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1621,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1713,7 @@
        "2021 D.C. Riot                     0         0          0  "
       ]
      },
-     "execution_count": 324,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,15 +1728,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "[0]\n",
-    "[0]\n",
-    "[0]\n",
-    "[0]"
+    "### How does this model compare to what actually happened in these protests?\n",
+    "* 1999 Seattle WTO had **arrests** and **crowd dispersal** (tear gas)\n",
+    "* 2011 Occupy Atlanta was mostly peaceful, but did have **arrests** and **crowd dispersal** with helicopters, SWAT team and motorcycle police.\n",
+    "* 2018 March For Our Lives was peaceful. No arrests, no accomodations, no crowd dispersal, no killings and no shootings or violence. It was **ignored**.\n",
+    "* 2020 Michigan Covid Lockdown was a small protest nicknamed Operation Gridlock. It had no arrests, no beatings, no crowd dispersal, no killings, no shootings or violence.  It was **ignored**.\n",
+    "* 2021 D.C. Riot had **arrests**. No accomodation, but there were **beatings** between law enforcement and the protesters. There was eventually **crowd dispersal**. Five were people **killed**, so there were **shootings**, and a **violent response**."
    ]
   },
   {
@@ -1761,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1772,8 +1760,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Use StandardScaler to scale the U.S. protests data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "sc = StandardScaler()\n",
+    "X_sc = sc.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1852,7 +1858,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -1867,7 +1873,7 @@
        "2011 Occupy Atlanta                 0             0         0               0   \n",
        "2018 March For Our Lives            0             0         0               0   \n",
        "2020 Michigan Covid Lockdown        0             0         0               0   \n",
-       "2021 D.C. Riot                      0             0         0               0   \n",
+       "2021 D.C. Riot                      0             0         0               1   \n",
        "\n",
        "                              ignore  killings  shootings  \n",
        "1999 Seattle WTO Protest           0         0          0  \n",
@@ -1877,13 +1883,13 @@
        "2021 D.C. Riot                     0         0          0  "
       ]
      },
-     "execution_count": 326,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred_multi_log_values = multi_label_forest_model.predict(X)\n",
+    "pred_multi_log_values = multi_label_forest_model.predict(X_sc)\n",
     "\n",
     "predictions_multi_log_df = pd.DataFrame(pred_multi_log_values, columns=['arrests', 'accomodation', 'beatings',\n",
     "       'crowddispersal', 'ignore', 'killings', 'shootings'], index=X.index)\n",
@@ -1892,11 +1898,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### How does this model compare to what actually happened in these protests?\n",
+    "* 1999 Seattle WTO had **arrests** and **crowd dispersal** (tear gas)\n",
+    "* 2011 Occupy Atlanta was mostly peaceful, but did have **arrests** and **crowd dispersal** with helicopters, SWAT team and motorcycle police.\n",
+    "* 2018 March For Our Lives was peaceful. No arrests, no accomodations, no crowd dispersal, no killings and no shootings or violence. It was **ignored**.\n",
+    "* 2020 Michigan Covid Lockdown was a small protest nicknamed Operation Gridlock. It had no arrests, no beatings, no crowd dispersal, no killings, no shootings or violence.  It was **ignored**.\n",
+    "* 2021 D.C. Riot had **arrests**. No accomodation, but there were **beatings** between law enforcement and the protesters. There was eventually **crowd dispersal**. Five were people **killed**, so there were **shootings**, and a **violent response**."
+   ]
   },
   {
    "cell_type": "code",
