--- a/users/multi_label_modeling_heather.ipynb
+++ b/users/multi_label_modeling_heather.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "(353, 71)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        " 'South America'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "[3 rows x 71 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -397,10 +397,10 @@
        "       ...,\n",
        "       [0, 1, 0, ..., 0, 0, 0],\n",
        "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 1, 0, 0]])"
+       "       [0, 0, 0, ..., 1, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
        "15179"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,11 +466,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 15 candidates, totalling 75 fits\n",
+      "Best Parameters = {'estimator__solver': 'liblinear', 'estimator__penalty': 'l1', 'estimator__max_iter': 10000, 'estimator__C': 0.01}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -491,9 +500,9 @@
     "# #hyperparameters_tuning = grid_search.fit(X_train, y_train)\n",
     "\n",
     "\n",
-    "# model_random_forest = MultiOutputClassifier(RandomForestClassifier())  \n",
+    "#  model_random_forest = MultiOutputClassifier(RandomForestClassifier())  \n",
     "\n",
-    "# # This chunk for random forest model\n",
+    "# # # This chunk for random forest model\n",
     "# hyperparameters_forest = dict(estimator__n_estimators=[20, 50, 100, 200, 300, 500, 1000],\n",
     "#                        estimator__min_samples_split=[2, 4, 7, 10],\n",
     "#                        estimator__max_depth=[3, 5, 10, 15, 20, 30],\n",
@@ -514,59 +523,52 @@
     "\n",
     "# tuned_model = hyperparameters_tuning.best_estimator_\n",
     "\n",
-    "\n",
     "#hyperparameters_tuning = grid_search.fit(X_train, y_train)\n",
-    "# model_log_class = MultiOutputClassifier(LogisticRegression())\n",
     "\n",
     "\n",
     "\n",
-    "# # This chunk for Bagging Classifier model with SVC and DecisionTree:\n",
-    "# hyperparameters_log = dict(estimator__penalty=['l1', 'l2'],\n",
-    "#                         estimator__C=[.005, .01, 1, 5],\n",
-    "#                         estimator__solver=['liblinear', 'saga'],\n",
-    "#                         estimator__max_iter=[1000, 5000])\n",
-    "# #                        estimator__base_estimator=[estimator_et, estimator_dt, estimator_rf],\n",
-    "# #                        estimator__n_estimators=[5, 10, 20, 50, 100, 200],\n",
-    "# #                        estimator__max_samples=[1, 2, 4, 7, 10],\n",
-    "# #                        estimator__max_features=[1, 3, 5, 10, 15, 20, 30],\n",
-    "# #                        estimator__min_samples_leaf=[1, 2, 3, 5, 8, 10],\n",
-    "# #                        estimator__min_impurity_decrease=[0, 0.2, 0.4, 0.6, 0.8],\n",
-    "# #                        estimator__max_leaf_nodes=[5, 10, 20, 30, 50, 100, 300],\n",
     "\n",
-    "# randomized_search_log = RandomizedSearchCV(model_log_class, hyperparameters_log,\n",
-    "#                                        n_iter=15, n_jobs=1, cv=5, verbose=1,\n",
-    "#                                        error_score='raise')\n",
     "\n",
-    "# hyperparams_tuning_log = randomized_search_log.fit(X_train, y_train)\n",
+    "model_log_class = MultiOutputClassifier(LogisticRegression())\n",
     "\n",
-    "# print('Best Parameters = {}'.format(hyperparams_tuning_log.best_params_))\n",
     "\n",
-    "# tuned_log_model = hyperparams_tuning_log.best_estimator_"
+    "\n",
+    "# This chunk for Bagging Classifier model with SVC and DecisionTree:\n",
+    "hyperparameters_log = dict(estimator__penalty=['l1', 'l2'],\n",
+    "                        estimator__C=[.005, .01, 1, 5],\n",
+    "                        estimator__solver=['liblinear', 'saga'],\n",
+    "                        estimator__max_iter=[10000, 50000])\n",
+    "#                        estimator__base_estimator=[estimator_et, estimator_dt, estimator_rf],\n",
+    "#                        estimator__n_estimators=[5, 10, 20, 50, 100, 200],\n",
+    "#                        estimator__max_samples=[1, 2, 4, 7, 10],\n",
+    "#                        estimator__max_features=[1, 3, 5, 10, 15, 20, 30],\n",
+    "#                        estimator__min_samples_leaf=[1, 2, 3, 5, 8, 10],\n",
+    "#                        estimator__min_impurity_decrease=[0, 0.2, 0.4, 0.6, 0.8],\n",
+    "#                        estimator__max_leaf_nodes=[5, 10, 20, 30, 50, 100, 300],\n",
+    "\n",
+    "randomized_search_log = RandomizedSearchCV(model_log_class, hyperparameters_log,\n",
+    "                                       n_iter=15, n_jobs=1, cv=5, verbose=1,\n",
+    "                                       error_score='raise')\n",
+    "\n",
+    "hyperparams_tuning_log = randomized_search_log.fit(X_train, y_train)\n",
+    "\n",
+    "print('Best Parameters = {}'.format(hyperparams_tuning_log.best_params_))\n",
+    "\n",
+    "tuned_log_model = hyperparams_tuning_log.best_estimator_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5725581249956584"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# hyperparams_tuning_log.best_score_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,63 +577,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'estimator__solver': 'liblinear',\n",
-       " 'estimator__penalty': 'l1',\n",
-       " 'estimator__max_iter': 5000,\n",
-       " 'estimator__C': 0.01}"
-      ]
-     },
-     "execution_count": 74,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# hyperparams_tuning_log.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.573436401967674"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# tuned_log_model.score(X_train, y_train )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.566798418972332"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# tuned_log_model.score(X_test, y_test)"
    ]
@@ -645,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,18 +633,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "MultiOutputClassifier(estimator=LogisticRegression(C=0.01, max_iter=5000,\n",
+       "MultiOutputClassifier(estimator=LogisticRegression(C=0.01, max_iter=10000,\n",
        "                                                   penalty='l1',\n",
        "                                                   solver='liblinear'))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +664,7 @@
        "0.573436401967674"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +685,7 @@
        "0.566798418972332"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -740,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +836,7 @@
        "2          0  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +905,7 @@
        "0    0.06149  "
       ]
      },
-     "execution_count": 79,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -983,10 +949,10 @@
        "        [ 210,    0]],\n",
        "\n",
        "       [[3564,    0],\n",
-       "        [ 231,    0]]])"
+       "        [ 231,    0]]], dtype=int64)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1113,18 +1079,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.01      0.03       534\n",
-      "           1       1.00      0.03      0.05       391\n",
-      "           2       0.82      0.04      0.08       207\n",
-      "           3       0.74      0.56      0.64      1198\n",
-      "           4       0.72      0.88      0.79      2031\n",
-      "           5       0.83      0.02      0.05       210\n",
-      "           6       1.00      0.03      0.05       231\n",
+      "           0       0.00      0.00      0.00       534\n",
+      "           1       0.00      0.00      0.00       391\n",
+      "           2       0.00      0.00      0.00       207\n",
+      "           3       0.71      0.57      0.63      1198\n",
+      "           4       0.68      0.93      0.78      2031\n",
+      "           5       0.00      0.00      0.00       210\n",
+      "           6       0.00      0.00      0.00       231\n",
       "\n",
-      "   micro avg       0.73      0.52      0.61      4802\n",
-      "   macro avg       0.87      0.23      0.24      4802\n",
-      "weighted avg       0.80      0.52      0.51      4802\n",
-      " samples avg       0.65      0.60      0.61      4802\n",
+      "   micro avg       0.68      0.54      0.60      4802\n",
+      "   macro avg       0.20      0.21      0.20      4802\n",
+      "weighted avg       0.46      0.54      0.49      4802\n",
+      " samples avg       0.68      0.62      0.63      4802\n",
       "\n"
      ]
     },
@@ -1132,9 +1098,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1221: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1221: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1245: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\_classification.py:1245: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in samples with no true labels. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
@@ -1159,33 +1127,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tuned_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-39-ffc30ab57bfa>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0my_modeled\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtuned_model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'tuned_model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "y_modeled = tuned_model.predict(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0, 0, 1, 0, 0],\n",
-       "       [0, 0, 0, 0, 1, 0, 0],\n",
-       "       [0, 0, 0, 0, 1, 0, 0],\n",
-       "       [0, 0, 0, 1, 0, 0, 0],\n",
-       "       [0, 0, 0, 1, 0, 0, 0]], dtype=int64)"
-      ]
-     },
-     "execution_count": 372,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_modeled[0:5]"
    ]
@@ -1213,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,19 +1199,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy =  0.5654808959156785\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# accuracy\n",
     "print(\"Accuracy = \", accuracy_score(y_test,predictions))\n",
