--- a/code/02b_Add_Prosperity_Index.ipynb
+++ b/code/02b_Add_Prosperity_Index.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "[2 rows x 35 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "[3 rows x 31 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -434,56 +434,65 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>country</th>\n",
        "      <th>prosperity_2020</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>34.350055</td>\n",
+       "      <th>count</th>\n",
+       "      <td>167.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>59.573636</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>57.507638</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Algeria</td>\n",
-       "      <td>51.869120</td>\n",
+       "      <th>std</th>\n",
+       "      <td>13.455106</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Angola</td>\n",
-       "      <td>38.816856</td>\n",
+       "      <th>min</th>\n",
+       "      <td>27.888813</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>60.487355</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>46.866471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>56.881807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>66.859066</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>84.368117</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       country  prosperity_2020\n",
-       "0  Afghanistan        34.350055\n",
-       "1      Albania        59.573636\n",
-       "2      Algeria        51.869120\n",
-       "3       Angola        38.816856\n",
-       "4    Argentina        60.487355"
+       "       prosperity_2020\n",
+       "count       167.000000\n",
+       "mean         57.507638\n",
+       "std          13.455106\n",
+       "min          27.888813\n",
+       "25%          46.866471\n",
+       "50%          56.881807\n",
+       "75%          66.859066\n",
+       "max          84.368117"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "country_PI_df.head()"
+    "country_PI_df.describe()\n"
    ]
   },
   {
